<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60px"
        android:layout_marginVertical="10px"
        android:hint="@string/title"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldTitleUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"

            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60px"
        android:layout_marginVertical="10px"

        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldDescriptionUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"

            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="700px"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60px"
            android:layout_marginVertical="10px"

            android:hint="@string/location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldLocationUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/buttonGetLocationUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:src="@drawable/round_pin_drop_24" />


    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/cancel" />

        <Space
            android:layout_width="40px"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTint="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/update" />
    </LinearLayout>
</LinearLayout>